Controller and Service logic to handle id and name metadata in database change
